fix: update Vulnerability level cutoff

--- a/.github/workflows/foss_check.yml
+++ b/.github/workflows/foss_check.yml
@@ -33,6 +33,7 @@ jobs:
         with:
           path: .
           fail-build: true
+          severity-cutoff: high
 
       # ─── 5) License & Policy Check (ORT) ───────────────────────────────
       - name: ORT License & Policy Check
