fix(vulnerabilities): bump react-syntax-highlighter from 15.6.1 to ^15.6.1 for docs

--- a/docs/package.json
+++ b/docs/package.json
@@ -25,7 +25,7 @@
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^15.15.0",
-    "react-syntax-highlighter": "15.6.1",
+    "react-syntax-highlighter": "^15.6.1",
     "replace-in-file": "^8.3.0",
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.24.1",
