--- a/docs/package.json
+++ b/docs/package.json
@@ -30,5 +30,8 @@
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.24.1",
     "vite": "^6.2.0"
-  }
+  },
+  "overrides": {
+  "prismjs": "^1.30.0"
+}
 }
